<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/custom_post_btn_like"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/custom_post_tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:columnCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_post_tv_date"
        app:rowCount="4">

        <ImageView
            android:id="@+id/custom_post_img_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_columnWeight="1"
            app:layout_rowSpan="3"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/custom_post_tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/checkbox_on_background"
            android:drawablePadding="5dp"
            android:text="@string/custom_post_following"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/custom_post_tv_following_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:text="100"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/custom_post_tv_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/checkbox_on_background"
            android:drawablePadding="5dp"
            android:text="@string/custom_post_post"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/custom_post_tv_post_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:text="100"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/custom_post_tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/checkbox_on_background"
            android:drawablePadding="5dp"
            android:text="@string/custom_post_followers"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/custom_post_tv_followers_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:text="100"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/custom_post_btn_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#0C0B0B"
            android:text="@string/custom_post_follow"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/custom_post_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="Ayham Nassif"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/custom_post_tv_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Blah Blah Blab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_post_tv_body">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/custom_post_like" />

        <Button
            android:id="@+id/custom_post_btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/custom_post_share" />

        <Button
            android:id="@+id/custom_post_btn_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:drawableStart="@android:drawable/checkbox_on_background"
            android:drawablePadding="4dp"
            android:text="@string/custom_post_comment" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>